[gd_scene load_steps=16 format=2]

[ext_resource path="res://Maps/Assets/Test_Map_Surface.png" type="Texture" id=1]
[ext_resource path="res://Maps/Assets/Spawn_Button.png" type="Texture" id=2]
[ext_resource path="res://Maps/Test_Map.gd" type="Script" id=3]
[ext_resource path="res://Maps/Assets/Spawn_Button_Pressed.png" type="Texture" id=4]
[ext_resource path="res://Maps/Assets/Spawn_Head_Button.png" type="Texture" id=5]
[ext_resource path="res://Maps/Assets/Main_Menu_Button.png" type="Texture" id=6]
[ext_resource path="res://Maps/Assets/Spawn_Head_Button_Pressed.png" type="Texture" id=7]
[ext_resource path="res://Maps/Assets/Main_Menu_Button_Pressed.png" type="Texture" id=8]
[ext_resource path="res://Maps/Spawn_Third_Eyed_Head.gd" type="Script" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -77, 92, 0, 0, 0, 0, 792, 98, 0, 0, 0, 0, 792, 271, 0, 0, 0, 0, 217, 272, 0, 0, 0, 0, 216, 658 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 49, 70.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512, 0.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 512, 0.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 0.5, 301 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 0.5, 301 )

[node name="Test_Map" type="Node"]
script = ExtResource( 3 )

[node name="Surface" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 4, 4.16667 )
texture = ExtResource( 1 )

[node name="Enemy_Path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Spawn_Nobody_Ghost" type="TextureButton" parent="."]
margin_left = 926.0
margin_top = 552.0
margin_right = 1024.0
margin_bottom = 599.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Spawn_Third_Eyed_Head" type="TextureButton" parent="."]
margin_left = 926.0
margin_top = 505.0
margin_right = 1024.0
margin_bottom = 552.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
expand = true
script = ExtResource( 9 )

[node name="Main_Menu" type="TextureButton" parent="."]
margin_left = 926.0
margin_top = 458.0
margin_right = 1024.0
margin_bottom = 505.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="Lives" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="Test_Wave_Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="Not_Ground" type="Area2D" parent="." groups=["No_Build"]]

[node name="Track" type="CollisionPolygon2D" parent="Not_Ground"]
polygon = PoolVector2Array( 0, 66, 832, 67, 832, 305, 261, 305, 261, 600, 172, 600, 172, 224, 755, 224, 755, 126, 0, 126 )

[node name="Spawn_Buttons" type="CollisionShape2D" parent="Not_Ground"]
position = Vector2( 975, 528.5 )
shape = SubResource( 2 )

[node name="Off_Screen_Top" type="CollisionShape2D" parent="Not_Ground"]
position = Vector2( 512, -0.5 )
shape = SubResource( 3 )

[node name="Off_Screen_Bottom" type="CollisionShape2D" parent="Not_Ground"]
position = Vector2( 512, 600.5 )
shape = SubResource( 4 )

[node name="Off_Screen_Left" type="CollisionShape2D" parent="Not_Ground"]
position = Vector2( -0.5, 300 )
shape = SubResource( 5 )

[node name="Off_Screen_Right" type="CollisionShape2D" parent="Not_Ground"]
position = Vector2( 1024.5, 300 )
shape = SubResource( 6 )

[connection signal="pressed" from="Spawn_Nobody_Ghost" to="." method="_on_Spawn_Nobody_Ghost_pressed"]
[connection signal="button_down" from="Spawn_Third_Eyed_Head" to="Spawn_Third_Eyed_Head" method="_on_Spawn_Third_Eyed_Head_button_down"]
[connection signal="mouse_exited" from="Spawn_Third_Eyed_Head" to="Spawn_Third_Eyed_Head" method="_on_Spawn_Third_Eyed_Head_mouse_exited"]
[connection signal="pressed" from="Main_Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="timeout" from="Test_Wave_Timer" to="." method="_on_Wave_Timer_timeout"]
